--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -3,8 +3,8 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% set showDefaultHomepage = config("Ceres.default.homepage") %}
-{% set companyLogo = config("Ceres.header.company_logo") %}
-{% set companyName  = trans("Ceres::Template.headerCompanyName") %}
+{% set companyLogo = config("K8theme.header.company_logo") %}
+{% set companyName  = trans("K8theme::Template.headerCompanyName") %}
 
 {% block PartialHead %}
   <meta name="description" content="{{ trans('K8theme::Template.homepageMetaDescription') }}">
