add it-recht Prüfzeichen

--- a/resources/views/Containers/FooterServices/CertifiedBy.twig
+++ b/resources/views/Containers/FooterServices/CertifiedBy.twig
@@ -6,5 +6,10 @@
     <li>
       <div class="icon-sprite" id="ppks" title="Käuferschutz bei Zahlung via PayPal">&nbsp;</div>
     </li>
+    <li>
+      <div>
+        <img src="https://www.it-recht-kanzlei.de/logo/Pruefzeichen_der_IT-Recht_Kanzlei.png?i=2b1af-11931-39cd-9083-1" alt="Vertreten durch die IT-Recht Kanzlei" />
+      </div>
+    </li>
   </ul>
 </div>
