--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -2,43 +2,37 @@
 {% import "Ceres::Category.Macros.CategoryTree" as Tree %}
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
+{% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets ) %}
+
 {% block PageBody %}
 
+    {{ component( "Ceres::ItemList.Components.CategoryItem") }}
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterList") }}
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterTagList") }}
-    {{ component( "Ceres::ItemList.Components.ItemList") }}
-    {{ component( "Ceres::ItemList.Components.CategoryImageCarousel") }}
-    {{ component( "Ceres::ItemList.Components.ItemListSorting") }}
-    {{ component( "Ceres::ItemList.Components.ItemsPerPage") }}
-    {{ component( "Ceres::ItemList.Components.Pagination") }}
 
-    {% if ceresConfig.item.showCategoryImage %}
+    {% if category is defined and ceresConfig.item.showCategoryImage %}
         {% include "K8theme::Category.Item.Partials.CategoryParallaxImage" with { 'category': category } %}
     {% endif %}
 
-    {% set shippingCat = config("Ceres.global.shippingCostsCategoryId") %}
-
-    {% set categoryDescriptionTop = ceresConfig.item.showCategoryDescriptionTop %}
-    {% set categoryDescriptionBottom = ceresConfig.item.showCategoryDescriptionBottom %}
-
     <div class="categoriegrid page-content container-max">
-        {% if not ceresConfig.item.showCategoryImage %}
-            <div class="row mt-1">
+
+        {% if category is not defined and itemList is not empty %}
+            <div class="row mt-3">
+                <div class="col-12">
+                    <h1 class="h2" id="searchPageTitle">{{ trans("Ceres::Template.itemSearchResults") }} {{ searchString }}</h1>
+                </div>
+            </div>
+        {% endif %}
+
+        {% if category is defined and not ceresConfig.item.showCategoryImage %}
+            <div class="row mt-3">
                 <div class="col-12">
                     <h1 class="h2 category-title">{{ category.details[0].name }}</h1>
-                    {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
-                        <div class="category-description mb-1" data-category-description="1">
-                          {% if category.details[0].description is not empty %}<div>{% endif %}
-                            {{ category.details[0].description }}
-                          {% if category.details[0].description is not empty %}</div>{% endif %}
-                        </div>
+                    {% if ceresConfig.item.showCategoryDescriptionTop in ["description1", "both"] and category.details[0].description | trim is not empty %}
+                        <div class="category-description mb-3">{{ category.details[0].description | raw }}</div>
                     {% endif %}
-                    {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
-                        <div class="category-description mb-1" data-category-description="2">
-                          {% if category.details[0].description2 is not empty %}<div>{% endif %}
-                            {{ category.details[0].description2 }}
-                          {% if category.details[0].description2 is not empty %}</div>{% endif %}
-                        </div>
+                    {% if ceresConfig.item.showCategoryDescriptionTop in ["description2", "both"] and category.details[0].description2 | trim is not empty %}
+                        <div class="category-description mb-3">{{ category.details[0].description2 | raw }}</div>
                     {% endif %}
                 </div>
             </div>
@@ -50,10 +44,17 @@
                     <div class="col-12">
                         <div class="list-wrapper">
                             {% include "Ceres::Category.Item.Partials.ItemSorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
+
                             {% include "Ceres::Category.Item.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
-                            {% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter", facets ) %}
+
                             {% if overrideSearchFilters | trim is empty %}
-                                <item-filter-list :facet-data="{{ facets | json_encode }}"></item-filter-list>
+                                <item-filter-list :facet-data="{{ facets | json_encode }}">
+                                    {% if facets | length > 0 %}
+                                        <a class="btn btn-link filter-toggle" href="#filterCollapse">
+                                            <i class="fa fa-sliders default-float" aria-hidden="true"></i> {{ trans("Ceres::Template.itemFilter") }}
+                                        </a>
+                                    {% endif %}
+                                </item-filter-list>
                             {% else %}
                                 {{ overrideSearchFilters }}
                             {% endif %}
@@ -70,16 +71,13 @@
             <div class="list-controls mb-3 row">
                 <div class="col-12">
                     {% include "Ceres::Category.Item.Partials.Pagination" %}
-                    <noscript>
-                        {% include "Ceres::Category.Item.Partials.Pagination" %}
-                    </noscript>
                 </div>
             </div>
         {% endif %}
 
         <div class="row">
 
-            {% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}
+            {% if category is defined and ceresConfig.header.showNavBars in ["side", "both"] %}
                 <div class="col-3 hidden-md-down">
                     <div class="sidebar-categories">
                         <div class="category-title">{{ trans("Ceres::Template.itemCategories") }}</div>
@@ -91,66 +89,73 @@
 
             {% endif %}
 
-            <div class="col-12 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}9{% else %}12{% endif %}">
+            <div class="col-12 col-lg-{% if category is defined and ceresConfig.header.showNavBars in ["side", "both"] %}9{% else %}12{% endif %}">
+                <ul class="product-list row grid">
+                    {% for item in itemList %}
+                        <li class="col-12 col-sm-6 col-md-4 col-lg-{% if category is defined and ceresConfig.header.showNavBars in ["side", "both"] %}4{% else %}3{% endif %}">
+                            <category-item
+                                item-data-ref="{{ item.data | json_data }}"
+                                :decimal-count="{{ ceresConfig.item.storeSpecial }}">
+                                <template #before-prices>{{ LayoutContainer.show("Ceres::CategoryItem.BeforePrices", item.data) }}</template>
+                                <template #after-prices>{{ LayoutContainer.show("Ceres::CategoryItem.AfterPrices", item.data) }}</template>
 
-                <div id="twig-rendered-item-list" class="item-list-frame{% if ceresConfig.item.loadingAnimationType == "blur" %} blur-effect{% endif %}">
+                                <a href="{{ item.data | itemURL }}" class="small">
+                                    <i class="fa fa-image"></i>
+                                    <span>{{ item.data | itemName }}</span>
+                                </a>
+                            </category-item>
+                        </li>
+                    {% endfor %}
+                </ul>
 
-                    {% if ceresConfig.item.loadingAnimationType != "blur" %}
-                        {% include "Ceres::ItemList.Partials.LoadingAnimation" %}
-                    {% endif %}
-
-                    <ul class="product-list row grid" v-is-loading-watcher="$store.state.itemList.isLoading">
-                        {% for item in itemList %}
-                            <li class="col-12 col-sm-6 col-md-4 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}4{% else %}3{% endif %}">
-                                {% include "Ceres::Category.Item.Partials.CategoryListItem" with { 'item': item, 'shippingCat': shippingCat } %}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-
-                <div id="vue-rendered-item-list" style="display:none">
-                    <item-list template="#vue-item-list" :total-items-data="{{ itemCountTotal }}" :category-id="{{ category.id }}"></item-list>
-                </div>
-
+                {% if category is not defined and itemList is empty %}
+                    <p class="h3 text-muted mb-5 text-center">{{ trans("Ceres::Template.itemSearchNoResults", {"searchString": searchString}) }}</p>
+                {% endif %}
             </div>
         </div>
+
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
-            <div class="list-controls mb-3 row">
+            <div class="list-controls mb-5 row">
                 <div class="col-12">
                     {% include "Ceres::Category.Item.Partials.Pagination" %}
-                    <noscript>
-                        {% include "Ceres::Category.Item.Partials.Pagination" %}
-                    </noscript>
                 </div>
             </div>
         {% endif %}
 
-        <div class="col-12">
-            {% if categoryDescriptionBottom == "description1" or categoryDescriptionBottom == "both" %}
-                <div class="category-description mb-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
-            {% endif %}
-            {% if categoryDescriptionBottom == "description2" or categoryDescriptionBottom == "both" %}
-                <div class="category-description mb-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
-            {% endif %}
-        </div>
+        {% if category is defined %}
+            <div class="col-12">
+                {% if ceresConfig.item.showCategoryDescriptionBottom in ["description1", "both"] and category.details[0].description | trim is not empty %}
+                    <div class="category-description mb-3">{{ category.details[0].description | raw }}</div>
+                {% endif %}
+                {% if ceresConfig.item.showCategoryDescriptionBottom in ["description2", "both"] and category.details[0].description2 | trim is not empty %}
+                    <div class="category-description mb-3">{{ category.details[0].description2 | raw }}</div>
+                {% endif %}
+            </div>
+        {% endif %}
     </div>
 
 {% endblock %}
 
 {% block PartialHead %}
-    <script type="application/ld+json">{"@context": "http://schema.org","@type": "WebSite","url": "{{ webstoreConfig.domainSsl }}","potentialAction":{"@type": "SearchAction","target": "{{ webstoreConfig.domainSsl }}/search?query={search_term}","query-input": "required name=search_term"}}</script>
+    <script type="application/ld+json">{"@context": "http://schema.org","@type": "WebSite","url": "{{ webstoreConfig.domainSsl }}","potentialAction":{"@type": "SearchAction","target": "{{ webstoreConfig.domainSsl ~ urls.search }}?query={search_term}","query-input": "required name=search_term"}}</script>
 
-    {% if currentPage-1 > 0 %}
-        <link rel="prev" href="{{ webstoreConfig.domainSsl }}?{{ query | merge({'page' : currentPage-1 }) | url_encode }}" />
+    {% set canonicalUrl = services.url.getCanonicalURL() %}
+    {% if currentPage - 1 > 0 %}
+        <link rel="prev" href="{{ canonicalUrl ~ queryString({'page': currentPage - 1}) }}" />
     {% endif %}
 
-    {% if currentPage+1 <= pageMax %}
-        <link rel="next" href="{{ webstoreConfig.domainSsl }}?{{ query | merge({'page' : currentPage+1 }) | url_encode }}" />
+    {% if currentPage + 1 <= pageMax %}
+        <link rel="next" href="{{ canonicalUrl ~ queryString({'page': currentPage + 1}) }}" />
     {% endif %}
 
-    <title>{% if category.details[0].metaTitle %}{{ category.details[0].metaTitle }}{% else %}{{ category.details[0].name }}{% endif %} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
+    {% if category is defined %}
+        <title>{% if category.details[0].metaTitle %}{{ category.details[0].metaTitle }}{% else %}{{ category.details[0].name }}{% endif %} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 
-    <meta name="description" content="{{ category.details[0].metaDescription }}">
-    <meta name="keywords" content="{{ category.details[0].metaKeywords }}">
-    <meta name="robots" content="{% if forceNoIndex or (currentPage >= config("Ceres.pagination.noIndex") and config("Ceres.pagination.noIndex") != 0 )%}NOINDEX{% else %}{{ metaRobots }}{% endif %}">
+        <meta name="description" content="{{ category.details[0].metaDescription }}">
+        <meta name="keywords" content="{{ category.details[0].metaKeywords }}">
+        <meta name="robots" content="{% if forceNoIndex or (currentPage >= config("Ceres.pagination.noIndex") and config("Ceres.pagination.noIndex") != 0 )%}NOINDEX{% else %}{{ metaRobots }}{% endif %}">
+    {% else %}
+        <meta name="robots" content="{{ config("Ceres.meta.robots_search_result") }}">
+        <title>{{ trans("Ceres::Template.itemSearchResults") }} {{ searchString }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
+    {% endif %}
 {% endblock %}
