--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -3,11 +3,10 @@
 <header id="page-header" class="top-bar fixed-top">
     <div>
         <div class="container-max">
-            <div class="row">
+            <div class="row mx-0">
                 {{ LayoutContainer.show("Ceres::Header.LeftSide") }}
 
                 <ul id="controlsList" class="controls-list list-inline">
-
                     <li class="list-inline-item control-user">
                         <user-login-handler>
                             <a data-toggle="modal">
@@ -66,14 +65,13 @@
     </div>
 </header>
 
-
 <!-- breadcrumb -->
 {% if not services.template.isHome() and not services.template.isMyAccount() and not services.template.isCheckout() %}
     {% include "Ceres::PageDesign.Partials.Header.Breadcrumb" %}
 {% endif %}
 
 <div class="container-max page-header">
-    <div class="row">
+    <div class="row mx-0">
         <div id="searchBox" class="cmp cmp-search-box collapse">
             {% set overrideSearchBar = LayoutContainer.show("Ceres::Search.SearchBar") %}
             {% if overrideSearchBar | trim is empty %}
