--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -3,37 +3,48 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% set showDefaultHomepage = config("Ceres.default.homepage") %}
-{% set companyLogo = config("K8theme.header.company_logo") %}
+{% set companyLogo  = config("K8theme.header.company_logo") %}
 {% set companyName  = trans("K8theme::Template.headerCompanyName") %}
 
 {% block PartialHead %}
-  <meta name="description" content="{{ trans('K8theme::Template.homepageMetaDescription') }}">
-  <meta name="robots" content="{% if forceNoIndex %}NOINDEX{% else %}{{ config("K8theme.meta.robots_home") }}{% endif %}">
-  <meta property="og:title" content="{{ companyName }}"/>
-  <meta property="og:type" content="article"/>
-  <meta property="og:url" content="{{ services.webstoreConfig.getWebstoreConfig().domainSsl }}"/>
-  <meta property="og:image" content="{% if ('http' in companyLogo) or ('layout/' in companyLogo) %}{{ companyLogo }}{% else %}{{ plugin_path('Ceres') }}/{{ companyLogo }}{% endif %}"/>
+    <meta name="description" content="{{ trans('K8theme::Template.homepageMetaDescription') }}">
+    <meta name="robots" content="{% if forceNoIndex %}NOINDEX{% else %}{{ config("K8theme.meta.robots_home") }}{% endif %}">
+    <meta property="og:title" content="{{ companyName }}"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:url" content="{{ services.webstoreConfig.getWebstoreConfig().domainSsl }}"/>
+    <meta property="og:image"
+          content="{% if ('http' in companyLogo) or ('layout/' in companyLogo) %}{{ companyLogo }}{% else %}{{ plugin_path('Ceres') }}/{{ companyLogo }}{% endif %}"/>
 
-  <script type="application/ld+json">
-      {"@context": "http://schema.org","@type": "WebSite","url": "{{ services.webstoreConfig.getWebstoreConfig().domainSsl }}","potentialAction":{"@type": "SearchAction","target": "{{ services.webstoreConfig.getWebstoreConfig().domainSsl ~ urls.search }}?query={search_term}","query-input": "required name=search_term"}}
-  </script>
+    <script type="application/ld+json">
+        {"@context": "http://schema.org","@type": "WebSite","url": "{{ services.webstoreConfig.getWebstoreConfig().domainSsl }}","potentialAction":{"@type": "SearchAction","target": "{{ services.webstoreConfig.getWebstoreConfig().domainSsl ~ urls.search }}?query={search_term}","query-input": "required name=search_term"}}
+    </script>
 
-  <title>{{ companyName }}</title>
+    <title>{{ companyName }}</title>
 {% endblock %}
 
 {% block PageBody %}
 
-<div class="container-max page-content">
-    <div class="row">
-        <div class="col-12 mb-3">
-    {% if config("Ceres.homepage.showShopBuilderContent") == "true" or request.get('isContentBuilder') == 1 %}
+    {% if ceresConfig.homepage.showShopBuilderContent or request.get('isContentBuilder') == 1 %}
+        <div class="container-max page-content">
+            <div class="row">
+                <div class="col mb-3">
+                    {% for content in container("Ceres::Homepage") if content.plugin == "Plenty" %}
+                        {{ content.result|raw }}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
 
-        {% for content in container("Ceres::Homepage") if content.plugin == "Plenty" %}
-            {{ content.result | raw }}
-        {% endfor %}
+    {% else %}
+
+        {% if showDefaultHomepage == "true" %}
+            {% include 'Ceres::Homepage.MarketingHomepage.twig' %}
+        {% else %}
+            {% block ThemeHomepage %}
+                {% include 'Ceres::Homepage.DefaultHomepage.twig' %}
+            {% endblock %}
+        {% endif %}
 
     {% endif %}
-        </div>
-    </div>
-</div>
+
 {% endblock %}
