--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -110,6 +110,12 @@
             </div>
         </div>
 
+        <ul class="footnotes">
+          <li><sup>1</sup>&nbsp;Nur an Werktagen von Montags bis Freitags. Bei Zahlung per Vorkasse ab Zahlungseingang</li>
+          <li><sup>2</sup>&nbsp;Gilt f&uuml;r Lieferungen nach Deutschland (Lieferzeit bei Vorkasse 3-4 Werktage ab Zahlungsanweisung). Lieferzeiten f&uuml;r andere L&auml;nder und Informationen zur Berechnung des Liefertermins siehe <a title="Zahlungs- &amp; Versandinfos" href="//www.krazy8.de/zahlungs-und-versandinfos">Zahlungs- &amp; Versandinfos</a></li>
+          <li>* inkl. gesetzl. MwSt. zzgl. <a title="Versandkosten" href="//www.krazy8.de/zahlungs-und-versandinfos">Versandkosten</a></li>
+        </ul>
+        
         {% set cat = services.category.get(config('Ceres.global.category.legal_disclosure')) %}
         <div class="copyright text-center my-1">
             <div class="static-link-list">
