--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -5,36 +5,6 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-:root {
-  --blue: #008ebd;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --red: #d4021d;
-  --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #28a745;
-  --teal: #20c997;
-  --cyan: #17a2b8;
-  --white: #fff;
-  --gray: #6c757d;
-  --gray-dark: #343a40;
-  --primary: #008ebd;
-  --secondary: #d4021d;
-  --success: #28a745;
-  --info: #17a2b8;
-  --warning: #ffc107;
-  --danger: #dc3545;
-  --light: #f8f9fa;
-  --dark: #343a40;
-  --breakpoint-xs: 0;
-  --breakpoint-sm: 576px;
-  --breakpoint-md: 768px;
-  --breakpoint-lg: 992px;
-  --breakpoint-xl: 1200px;
-  --font-family-sans-serif: Custom-Font, Helvetica, Arial, sans-serif;
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
 
 *,
 *::before,
@@ -44,9 +14,8 @@
 
 html {
   font-family: sans-serif;
-  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -356,7 +325,7 @@ html {
 body {
   font-family: Custom-Font, Helvetica, Arial, sans-serif;
   font-size: 1rem;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   color: #4D4F4D;
   background-color: #000000;
   background-image: url(https://cdn02.plentymarkets.com/qc8qz643lcav/frontend/layout/bilder/HG03.jpg);
@@ -14653,6 +14622,13 @@ body.menu-is-visible {
 
 .footer .btn-mail:hover {
   background-color: #b2b1a7;
+}
+
+.footnotes {
+  font-size: 10px;
+  color: #707070;
+  list-style: none;
+  padding: 20px 0;
 }
 
 .plenty-brand {
